--- a/package.json
+++ b/package.json
@@ -1,22 +1,30 @@
 {
-  "name": "bid-scaffold",
+  "name": "moxboxx",
   "version": "0.0.1",
   "private": true,
   "engines": {
-    "node": ">= 0.6.19",
+    "node": ">= 0.8.9",
     "npm": "1.1.x"
   },
   "dependencies": {
-    "connect": ">= 2.3.6",
-    "express": "2.5.11",
-    "jade": ">= 0.26.3",
-    "request": "2.9.153",
-    "express-messages": ">= 0.0.2",
-    "nconf": "git://github.com/flatiron/nconf.git"
+    "client-sessions": ">= 0.0.9",
+    "connect": ">= 2.4.5",
+    "express": ">= 2.5.11",
+    "jade": ">= 0.27.2",
+    "request": "git://github.com/mikeal/request.git",
+    "nconf": "git://github.com/flatiron/nconf.git",
+    "connect-redis": ">= 1.4.4",
+    "hiredis": "0.1.14",
+    "redis": "0.7.2",
+    "express-persona": "0.0.7",
+    "requirejs": ">= 2.1.0"
   },
   "devDependencies": {
-    "mocha": "1.2.2",
-    "nock": ">= 0.13.3",
-    "should": ">= 0.0.1"
+    "mocha": "1.4.2",
+    "nock": ">= 0.13.4",
+    "should": ">= 1.1.1"
+  },
+  "scripts": {
+    "test": "make test"
   }
 }
