--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "hiredis": "0.1.14",
     "redis": "0.7.2",
     "express-persona": "0.0.7",
-    "requirejs": ">= 2.1.0"
+    "requirejs": ">= 2.1.0",
+    "gravatar": "1.0.6"
   },
   "devDependencies": {
     "mocha": "1.4.2",
