--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "redis": "0.7.2",
     "express-persona": "0.0.7",
     "requirejs": ">= 2.1.0",
-    "gravatar": "1.0.6"
+    "gravatar": "1.0.6",
+    "knox": "0.4.1",
+    "knox-mpu": ">= 0.0.4"
   },
   "devDependencies": {
     "mocha": "1.4.2",
