--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "knox": "0.4.1",
     "knox-mpu": ">= 0.0.4",
     "orm": "git://github.com/dresende/node-orm2.git",
-    "mysql": ">= 2.0.0-alpha4"
+    "mysql": ">= 2.0.0-alpha4",
+    "hiredis": "0.1.14",
+    "redis": "0.7.2"
   },
   "devDependencies": {
     "mocha": "1.4.2",
