--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "gravatar": "1.0.6",
     "knox": "0.4.1",
     "knox-mpu": ">= 0.0.4",
-    "orm": "git://github.com/dresende/node-orm.git",
-    "mysql": ">= 2.0.0-alpha4",
+    "sequelize": "1.6.0-beta4",
     "hiredis": "0.1.14",
     "redis": "0.7.2"
   },
