--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "gravatar": "1.0.6",
     "knox": "0.4.1",
     "knox-mpu": ">= 0.0.4",
-    "orm": "git://github.com/ednapiranha/node-orm.git",
+ //   "orm": "git://github.com/ednapiranha/node-orm.git",
+    "sequelize": "1.6.0-beta4",
     "hiredis": "0.1.14",
     "redis": "0.7.2"
   },
