--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "knox-mpu": ">= 0.0.4",
     "sequelize": "1.6.0-beta4",
     "hiredis": "0.1.14",
-    "redis": "0.7.2"
+    "redis": "0.7.2",
+    "postmark": "0.1.8"
   },
   "devDependencies": {
     "mocha": "1.4.2",
