--- a/package.json
+++ b/package.json
@@ -3,23 +3,24 @@
   "version": "0.0.1",
   "private": true,
   "engines": {
-    "node": ">= 0.8.9",
-    "npm": "1.1.x"
+    "node": "~0.10.x",
+    "npm": "1.2.x"
   },
   "dependencies": {
-    "client-sessions": ">= 0.3.1",
     "connect": "2.7.6",
     "express": "3.2.0",
     "jade": "0.28.2",
     "request": "2.16.6",
     "nconf": "0.6.7",
-    "express-persona": "git://github.com/jbuck/express-persona.git",
     "requirejs": "2.1.5",
     "gravatar": "1.0.6",
     "knox": "0.4.1",
     "knox-mpu": ">= 0.0.4",
     "sequelize": "1.6.0-beta4",
-    "postmark": "0.1.8"
+    "postmark": "0.1.8",
+    "passport": "~0.1.17",
+    "passport-twitter": "~1.0.2",
+    "connect-redis": "~1.4.6"
   },
   "devDependencies": {
     "mocha": "1.4.2",
@@ -27,6 +28,6 @@
     "should": ">= 1.1.1"
   },
   "scripts": {
-    "test": "make test"
+    "test": "mocha"
   }
 }
