--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "engines": {
     "node": "~0.10.x",
-    "npm": "1.2.x"
+    "npm": "1.3.x"
   },
   "dependencies": {
-    "connect": "2.7.6",
-    "express": "3.2.0",
+    "connect": "~2.14.3",
+    "express": "~3.5.1",
     "jade": "0.28.2",
     "request": "2.16.6",
     "nconf": "0.6.7",
@@ -28,6 +28,7 @@
     "should": ">= 1.1.1"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "start": "nodemon app.js"
   }
 }
