--- a/package.json
+++ b/package.json
@@ -9,14 +9,13 @@
   "dependencies": {
     "connect": "~2.14.3",
     "express": "~3.5.1",
-    "jade": "0.28.2",
+    "jade": "~1.3.0",
     "request": "2.16.6",
     "nconf": "0.6.7",
     "requirejs": "2.1.5",
     "knox": "0.4.1",
     "knox-mpu": ">= 0.0.4",
     "sequelize": "1.6.0-beta4",
-    "postmark": "0.1.8",
     "passport": "~0.1.17",
     "passport-twitter": "~1.0.2",
     "connect-redis": "~1.4.6"
